tests/snapshots/examples_fixtures/diagnostics__lint__warnings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/lint/warnings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
